checking in nim+ interface debugging progress which has functionality tested for Paul Lebrun.

--- a/WebGUI/html/ConfigurationTableEditor.html
+++ b/WebGUI/html/ConfigurationTableEditor.html
@@ -50,6 +50,7 @@
 			background-color: #efeaea;
 			text-align: center;
 			padding: 10px;
+			overflow: hidden;
 		}
 		
 	</style>
@@ -760,7 +761,10 @@
 
 					str += "<tr><td>";
 
-					str += "<select style='width:150px' id='fixedChoicesSelect-" + c + "' >";
+					str += "<select style='width:150px' id='fixedChoicesSelect-" + c + "' " +
+							"onchange='document.getElementById(\"newChoiceInput-" + c + 
+							"\").value = this.value;'" +
+							">";
 					var colChoicesArr = colChoices[c].split(',');
 
 					//always show default first
