checking in lebrun nim+ progress

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -4444,7 +4444,8 @@
 				str += "<br>Choose the versions of configurations you would like to add...<br>";
 			
 			str += "<div id='createGroupInfo'></div><br>";
-			str += "<button type='button' onmouseup='javascript:" +
+			
+			var createButtonStr = "<button type='button' onmouseup='javascript:" +
 					"popUpSaveNewGroupForm(document.getElementById(\"newConfigName\").value," +
 					"-1,1);" + //sourceGroupKey, sourceType
 					//createConfigGroup()'
@@ -4452,6 +4453,7 @@
 					"Create the new persistent group and group key pair." +
 					"'>" +
 					"Create the new Group</button>";
+			str += createButtonStr;
 			str += "<br><br>";
 			str += "Group Name: <input id='newConfigName'/>";
 			str += "<br><br>";
@@ -4533,10 +4535,7 @@
 			}	
 			str += "</table>";
 
-			str += "<button type='button' onmouseup='javascript:createConfigGroup()' title='" +
-					"Create the new persistent group and group key pair." +
-					"'>" +
-					"Create the new Group</button>";
+			str += createButtonStr;
 			el.innerHTML = str;		
 			
 
@@ -9154,11 +9153,10 @@
 			{
 				var str = "";
 				try
-				{
+				{				
+					str = _editingCellEl.getElementsByTagName("input")[0].value;
 					Debug.log("CfgGUI editCellOK editing r,c:" + r + "," + c + " = " +
-						_editingCellEl.getElementsByTagName("input")[0].value);
-				
-					_editingCellEl.getElementsByTagName("input")[0].value;
+						str);
 				}
 				catch(err)
 				{
@@ -9757,7 +9755,7 @@
 			//set position and size
 			var gh = 85;
 			var w = 500;
-			var h = 385;
+			var h = 395;
 			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h /*h*/);
 
 //			var gh = 50;
