checking in from test beam work.

--- a/WebGUI/html/ConfigurationTableEditor.html
+++ b/WebGUI/html/ConfigurationTableEditor.html
@@ -1262,7 +1262,7 @@
 								"where each cell has a bit-field. The aspect ratio is optional. " +
 								"The color fields are optional. " +
 								"Optional fields you can leave as DEFAULT. \n\n" +
-								"The aspect ratio should be entered as <Height>:<Width>; for example, " +
+								"The aspect ratio should be entered as &lt;Height&gt;:&lt;Width&gt;; for example, " +
 								"if you have a pixel chip with pixel size 100 microns by 150 microns you " +
 								"may want your display to reflect that - you should enter &quot;100:150&quot (without the quotes)."
 								);
