fixed backbone backone type.

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -11186,7 +11186,7 @@
 									}
 									Debug.log(configMap);
 
-									saveGroupAndActivate("TableEditWizBackone",configMap,
+									saveGroupAndActivate("TableEditWizBackbone",configMap,
 											function(retParams)
 											{
 										Debug.log("Save and activate is done.");
@@ -11745,7 +11745,7 @@
 									}
 									Debug.log(configMap);
 
-									saveGroupAndActivate("TableEditWizBackone",configMap,
+									saveGroupAndActivate("TableEditWizBackbone",configMap,
 											function(retParams)
 											{
 										Debug.log("Save and activate is done.");
