--- a/WebGUI/html/MultiSelectBoxTest.html
+++ b/WebGUI/html/MultiSelectBoxTest.html
@@ -142,13 +142,18 @@
     	{
     		position:absolute;
     		left:200px;
-    		top:300px;			
+    		top:300px;		
+    		width:500px;
+    		height:600px;
     	}
 		#box2Div
 		{
-			position:absolute;
+			/*position:absolute;
 			left:300px;
-			top:700px;			
+			top:700px;			*/
+
+    		width:300px;
+    		height:200px;
 		}
     </style>
 
