--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -5617,8 +5617,11 @@
 					_editingCellElOldValue = el.textContent;
 					treeEditingNodeInitValue_ = _editingCellElOldValue;
 					
+					var ow = el.offsetWidth+6;
+					if(ow < 150) //force a minimum input width
+						ow = 150;
 					str += "<input type='text' onkeydown='keyHandler(event)' style='margin:-4px -2px -4px -1px;width:" + 
-							(el.offsetWidth+6) + "px; height:" + (el.offsetHeight) + "px' value='";
+							(ow) + "px; height:" + (el.offsetHeight) + "px' value='";
 					str += _editingCellElOldValue;
 					str += "' onmousedown='_mouseIsSelecting = true; Debug.log(_mouseIsSelecting);' " +
 							"onmouseup='_mouseIsSelecting = false; Debug.log(_mouseIsSelecting);event.stopPropagation();' " +
