--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -265,7 +265,6 @@
 		
 		var _versionTrackingIsOn = true;
 		var _firstTimeSilentActive = true;
-		var _lastSuccessfulActivateTime = 0;
 		var _useTableLinkDropdown = true;		
 		var _tableViewIsTransposed = false;
 		var _showTableDetails = true;
@@ -580,7 +579,9 @@
 			var el = document.getElementById("display");
 			el.innerHTML = "Loading...";
 			
-			DesktopContent.XMLHttpRequest("Request?RequestType=getGroupAliases", "", 
+			DesktopContent.XMLHttpRequest("Request?RequestType=getGroupAliases&" +
+					"reloadActiveGroups=1", //reload persistent active groups (persistent active config group will be modified when state machine configures) 
+					"", 
 					groupAliasesRequestHandler,anchorTarget,
 					0,0,true  //progressHandler, callHandlerOnErr, showLoadingOverlay
 					);			
@@ -4028,27 +4029,33 @@
 			else 
 			{
 				var el = document.getElementById("activeConfig");
-				el.innerHTML = str;
+				el.innerHTML = str;		
 				str = el.innerHTML;				
 				
-				var getTimeVal = (new Date()).getTime();
-				if(!_firstTimeSilentActive && //only popup after the first time
-						(str != oldStr ||  //if change
-								0))//RAR -- doesn't work FIXME... need to add flag from server that an activation was attempted.. getTimeVal - _lastSuccessfulActivateTime > 2*1000)) //or has been a long time (e.g. 2 seconds) 
+				//if flag from server that an activation was attempted..)
+				if(DesktopContent.getXMLValue(req,"AttemptedGroupActivation") == "1")
+				{
+					Debug.log("Note: There was a successful activation of the group '" +
+							DesktopContent.getXMLValue(req,"AttemptedGroupActivationName") + 
+							" (" + 
+							DesktopContent.getXMLValue(req,"AttemptedGroupActivationKey") + 
+							").'",
+							Debug.INFO_PRIORITY);
+				}				
+				else if(!_firstTimeSilentActive && //only popup after the first time
+						str != oldStr)  //if change							  
 				{						
 					if(thereIsAnEmpty) //may have been a deactivationg (due to error?)
 						Debug.log("Note: There was a change to the active Context group (check the top of the page)!",
 								Debug.INFO_PRIORITY);
 					else //must have been an activation
-						Debug.log("Note: There was a successful activation of a group (check the top of the page)!",
+						Debug.log("Note: There was a successful activation of a group (likely from a different GUI, check the System View for changes)!",
 								Debug.INFO_PRIORITY);
 
 					//Debug.log(_OTS_RELAUNCH_STR,Debug.INFO_PRIORITY);
 				}
-				else
-					_firstTimeSilentActive = false;
 				
-				_lastSuccessfulActivateTime = getTimeVal;
+				_firstTimeSilentActive = false;				
 			}				
 		}
 		
