fixed ancestral find of table name from leaf nodes.

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -8517,8 +8517,8 @@
 							if(!pel)
 								pel = document.getElementById("treeNode-linkTableName-" + 
 										(document.getElementById("treeNode-ParentId-" + 
-												(document.getElementById("treeNode-ParentId-" + 
-														parentIdString).textContent))));
+										(document.getElementById("treeNode-ParentId-" + 
+												parentIdString).textContent)).textContent));
 							if(!pel)
 							{
 								Debug.log("Big problem with locating table name through ancestry! " +
@@ -8652,8 +8652,8 @@
 							if(!pel)
 								pel = document.getElementById("treeNode-linkTableName-" + 
 										(document.getElementById("treeNode-ParentId-" + 
-												(document.getElementById("treeNode-ParentId-" + 
-														parentIdString).textContent))));
+										(document.getElementById("treeNode-ParentId-" + 
+												parentIdString).textContent)).textContent));
 							if(!pel)
 							{
 								Debug.log("Big problem with locating table name through ancestry! " +
@@ -8928,7 +8928,7 @@
 								pel = document.getElementById("treeNode-linkTableName-" + 
 										(document.getElementById("treeNode-ParentId-" + 
 										(document.getElementById("treeNode-ParentId-" + 
-												parentIdString).textContent))));
+												parentIdString).textContent)).textContent));
 							if(!pel)
 							{
 								Debug.log("Big problem with locating table name through ancestry! " +
@@ -9031,8 +9031,8 @@
 							if(!pel)
 								pel = document.getElementById("treeNode-linkTableName-" + 
 										(document.getElementById("treeNode-ParentId-" + 
-												(document.getElementById("treeNode-ParentId-" + 
-														parentIdString).textContent))));
+										(document.getElementById("treeNode-ParentId-" + 
+												parentIdString).textContent)).textContent));
 							if(!pel)
 							{
 								Debug.log("Big problem with locating table name through ancestry! " +
