checkpoint fixing tutorial data

--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -670,7 +670,7 @@
 				Debug.log("localCreateGroupingFieldFilters groups.length " + groups.length);
 				
 				var filterBoxesEl = document.createElement("div");
-				var defaultShowFilters = true;
+				var defaultShowFilters = false;
 				
 				//create toggle icon
 				el = document.createElement("a");
