config subset defaults are defaults now

--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -469,6 +469,7 @@
 				//			obj.fieldColumnType
 				//			obj.fieldColumnDataType
 				//			obj.fieldColumnDataChoicesArr[]
+				//			obj.fieldColumnDefaultValue
 
 				//for each record,
 				//	make an element that is "editable" and "selectable" (_selectedFieldIndex)
