checking in resolution of #16795 #16938 #16793 #16924 #16927 #17090

--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -1099,6 +1099,7 @@
 				console.log(recFieldValues);
 
 				//for each field, set value
+				//	SHOULD only be one field value returned
 				for(var i=0;i<recFieldValues.length;++i)
 				{
 					ConfigurationAPI.setEditableFieldValue(
