--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -536,7 +536,7 @@
 			//setupSpecificConfig("XDAQContextConfiguration","10","setupTableViewMode('anchorTag-XDAQContextConfiguration');"); return;
 
 			//setupSpecificConfigGroup("artdaqFclTest","46","","anchorTag-RawDataSaverConsumerConfiguration"); return;			
-			//setupSpecificConfigGroup("testContext","5"); return;
+			//setupSpecificConfigGroup("defaultConfig","1"); return;
 			
 			//setupConfigCreator(); return
 			
