First compiling version of OtsEthernetProgramming interface - revamped firmware and hardware inheritance for OTS classes.. left the PURDUE classes largely alone, but we should revisit

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -830,9 +830,9 @@
 						//no last group
 						
 						if(i == 0) //for "Configured"
-							str += "Last Configured: ";
+							str += "Last Configured by FSM: ";
 						else	//for "Started"
-							str += "Last Started: ";
+							str += "Last Started by FSM: ";
 					}
 					else
 					{
