--- a/WebGUI/html/Console.html
+++ b/WebGUI/html/Console.html
@@ -59,7 +59,7 @@
 			.controlsCheckbox {
 				float : left;
 				margin-left: 0px;
-				margin-top: -4px;
+				/*margin-top: -4px;*/
 				margin-bottom: -10px;
 			}
 			
@@ -79,8 +79,6 @@
 				margin-bottom: 18px; /*push down 2nd row*/
 			}
 			
-
-			/* ***************** CHAT HISTORY ******************************************/
 			
 			/* ***************** CONSOLE HISTORY ******************************************/
 			#consoleHistoryContainer {
@@ -204,11 +202,10 @@
 				border-radius: 3px;	
 				
 			}
-			
-			#controlsArea
-				overflow: hidden;					
-			}
 		
+			#PauseControlsLink {
+				margin-left: 40px;
+			}
 			
 		</style>
 				
